<resources>
    <string name="app_name">Thoughts</string>
    <string name="product_image">Product Image</string>
    <string name="title">Title</string>
    <string name="price">Цена</string>
    <string name="description">Описание</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="count">COUNT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="basket">Корзина</string>
    <string name="settings">Настройки</string>
    <string name="buy">Купить</string>
    <string name="add_to_basket">Добавить в корзину</string>
    <string name="store">Магазин</string>
    <string name="quantity">Quantity</string>
    <string name="multiply">*</string>
    <string name="res">RES</string>
    <string name="equals">=</string>
    <string name="answer">Ответить</string>
    <string name="product_name">Название продукта</string>
    <string name="update">Обновить</string>
    <string name="send">Отправить</string>
    <string name="cancel">Отмена</string>
</resources>
