<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/productImageIv"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/product_image"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/titleLl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/productImageIv"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/productTitleTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_weight="1"
            android:paddingBottom="5dp"
            android:text="@string/title"
            android:textColor="#3E3E3E"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/productPriceTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:maxWidth="100dp"
            android:text="@string/price"
            android:textColor="#7B8F80"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/productDescriptionTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/description"
        android:textColor="#676767"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/productImageIv"
        app:layout_constraintTop_toBottomOf="@id/titleLl" />


</androidx.constraintlayout.widget.ConstraintLayout>