<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="#fff"
    android:orientation="vertical"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/productTitleTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"

                android:paddingBottom="5dp"
                android:text="@string/title"
                android:textColor="#3E3E3E"
                android:textSize="21sp" />

            <ImageView
                android:id="@+id/productImageIv"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:layout_marginVertical="16dp"
                android:contentDescription="@string/product_image"
                android:src="@mipmap/ic_launcher" />


            <TextView
                android:id="@+id/productDescriptionTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/description"
                android:textColor="#676767"
                android:textSize="16sp" />


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/productPriceTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_weight="1"
            android:maxWidth="100dp"
            android:text="@string/price"
            android:textColor="#887C37"
            android:textSize="14sp" />


    </LinearLayout>

</LinearLayout>